--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/BTL
 spring.datasource.username=root
 spring.datasource.password=
+server.error.whitelabel.enabled=false
 #spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
